--- a/index.Rmd
+++ b/index.Rmd
@@ -7,11 +7,9 @@ output:
     css: ['styles.css']
     # set it to true for a self-contained HTML page but it'll take longer to render
     self_contained: false
-links-to-footnotes: true
 ---
 
 ```{r, include=FALSE}
-
 knitr::opts_chunk$set(
   results='asis', 
   echo = FALSE
@@ -20,11 +18,50 @@ knitr::opts_chunk$set(
 library(glue)
 library(tidyverse)
 
+# Set this to true to have links turned into footnotes at the end of the document
+PDF_EXPORT <- TRUE
+
+# Holds all the links that were inserted for placement at the end
+links <- c()
+
+find_link <- regex("
+  \\[   # Grab opening square bracket
+  .+?   # Find smallest internal text as possible
+  \\]   # Closing square bracket
+  \\(   # Opening parenthesis
+  .+?   # Link text, again as small as possible
+  \\)   # Closing parenthesis
+  ",
+  comments = TRUE)
+
+sanitize_links <- function(text){
+  if(PDF_EXPORT){
+    str_extract_all(text, find_link) %>% 
+      pluck(1) %>% 
+      walk(function(link_from_text){
+        title <- link_from_text %>% str_extract('\\[.+\\]') %>% str_remove_all('\\[|\\]') 
+        link <- link_from_text %>% str_extract('\\(.+\\)') %>% str_remove_all('\\(|\\)')
+        
+        # add link to links array
+        links <<- c(links, link)
+        
+        # Build replacement text
+        new_text <- glue('{title}<sup>{length(links)}</sup>')
+        
+        # Replace text
+        text <<- text %>% str_replace(fixed(link_from_text), new_text)
+      })
+  }
+  
+  text
+}
+
+
 # Takes a single row of dataframe corresponding to a position
 # turns it into markdown, and prints the result to console.
 build_position_from_df <- function(pos_df){
   
-  missing_start <- is.na(pos_df$start)
+  missing_start <- pos_df$start == 'N/A'
   dates_same <- pos_df$end == pos_df$start
   
   if(any(c(missing_start,dates_same))){
@@ -32,15 +69,16 @@ build_position_from_df <- function(pos_df){
   } else {
     timeline <- glue('{pos_df$end} - {pos_df$start}')
   }
-  
 
-  descriptions <- pos_df[str_detect(names(pos_df), 'description')] %>% as.list() %>% as.array()
+  descriptions <- pos_df[str_detect(names(pos_df), 'description')] %>% 
+    as.list() %>% 
+    map_chr(sanitize_links)
   
   # Make sure we only keep filled in descriptions
   description_bullets <- paste('-', descriptions[descriptions != 'N/A'], collapse = '\n')
   
   glue(
-"### {pos_df$title}
+"### {sanitize_links(pos_df$title)}
 
 {pos_df$loc}
 
@@ -55,7 +93,6 @@ build_position_from_df <- function(pos_df){
   ) %>% print()
 }
 
-
 # Takes nested position data and a given section id 
 # and prints all the positions in that section to console
 print_section <- function(position_data, section_id){
@@ -68,6 +105,7 @@ print_section <- function(position_data, section_id){
 fill_nas <- function(column){
   ifelse(is.na(column), 'N/A', column)
 }
+
 # Load csv with position info
 position_data <- read_csv('positions.csv') %>% 
   mutate_all(fill_nas) %>% 
@@ -88,15 +126,18 @@ Aside
 ================================================================================
 
 
-![Nick Strayer](https://pbs.twimg.com/profile_images/1145705332783616000/Hrua26iX_400x400.png){width=80%}
+![logo](beta_dist.png){width=100%}
 
+View this CV online with links at _nickstrayer.me/cv_
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
+
 - <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> [NicholasStrayer](https://twitter.com/NicholasStrayer)
-- <i class="fa fa-github"></i> [github.com/nstrayer](https://github.com/nstrayer)
+- <i class="fa fa-twitter"></i> NicholasStrayer
+- <i class="fa fa-github"></i> github.com/nstrayer
+- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
 - <i class="fa fa-phone"></i> (734) 645-0110
 
 
@@ -105,15 +146,20 @@ Skills {#skills}
 --------------------------------------------------------------------------------
 
 
-- Highly experienced in
-    - R 
-    - Python
-    - Javascript. 
-- Experience with
-    - Bash
-    - SQL
-    - C++
-    - AWK.  
+Highly experienced in
+
+
+- R 
+- Python
+- Javascript
+
+Experience with
+
+
+- Bash
+- SQL
+- C++
+- AWK
 
 
 Disclaimer {#disclaimer}
@@ -133,9 +179,15 @@ Main
 Nick Strayer {#title}
 --------------------------------------------------------------------------------
 
-I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terrabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/). 
 
-Currently searching for Data Scientist positions. 
+```{r, results='asis'}
+intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/)."
+
+cat(sanitize_links(intro_text))
+```
+
+
+Currently searching for a data science position that allows me build tools using visualization and machine learning to help people explore and understand their data. 
 
 
 
@@ -213,4 +265,14 @@ I regularly blog about data science and visualization on my blog [LiveFreeOrDich
 print_section(position_data, 'academic_articles')
 ```
 
+Links {data-icon=link}
+--------------------------------------------------------------------------------
+
+<br>
+
+```{r}
+walk2(links, 1:length(links), function(link, index){
+  print(glue('{index}. {link}'))
+})
+```
 
